# personal-project

project/: .pdm.toml  README.md  aws-cvpn-config.ovpn  broker.conf.yaml  pyproject.toml
project/challenge_data-main/: .gitignore  README.md
project/challenge_data-main/data/: broker.conf.yaml  broker.conf.yaml_OLD.yaml  structures.json
project/challenge_data-main/data/ComponentLibrary/: lower_bounds_chosen.txt  upper_bounds_chosen.txt
project/challenge_data-main/data/ComponentLibrary/component_selection_analysis/: motor_propeller_analysis.json  motor_propeller_battery_analysis.json  motor_propeller_battery_analysis_thrust.json
project/challenge_data-main/data/custom_designs/: custom_design1.json  test_quad_cargo.json  test_quad_mod.json
project/challenge_data-main/data/library_processing_scripts/: component_library_process.py  types_renaming.json
project/challenge_data-main/data/reverse_engineering/: component_choice.json  component_selection.json  connectors_components_mapping.json  grammar_rules.json  grammar_rules_hussein.json  grammar_rules_self.json
project/challenge_data-main/fdm/extract/: control_opt_result.json  fdmResult1_flightDynFast.inp  fdmResult1_flightDynFastOut.out  fdmResult2_flightDynFast.inp  fdmResult2_flightDynFastOut.out  fdmResult3_flightDynFast.inp  fdmResult3_flightDynFastOut.out  fdmResult4_flightDynFast.inp  fdmResult4_flightDynFastOut.out  flightDynFast.inp  flightDynFastOut.out  uav_gen.stl
project/challenge_data-main/fdm/tmp/: jsonout.json  test.out  tmp.inp
project/challenge_data-main/output/: shared_parameters.json
project/challenge_data-main/output/analysis/: component_choice_in_designs.json  components_types_in_design.json  learned_parameters.json  popular_node_keys.json
project/output/designs/NewAxe/: design_swri.json
project/output/designs/NuSpade/: design_swri.json
project/output/designs/Rake/: design_swri.json
project/output/designs/TestQuad/: design_swri.json
project/output/designs/Trowel/: design_swri.json
(+585 files in other folders)
