[project]
name = "SimpleUAM"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack020945", email = "jack020945@berkeley.edu"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
